--- a/README.Rmd
+++ b/README.Rmd
@@ -208,11 +208,13 @@ ggplot(performance$scenarioTable,
 
 <!-- *CP: Im Folgenden Absatz ist nicht ganz klar auf was Ihr Euch da bezieht. Ich denke ich würde für alle Grafiken eine Fig. caption einfügen, das macht es für den Leser deutlich leichter und Ihr könnt dann besser darauf verweisen.* -->
 
-Fig. 3 can be used to further explore the effects of the indicators on the modeled land-use decisions. Looking at the performances of this multi-functional farm reveals, which indicators define $\beta$ and therefore define the result.
+Fig. 3 can be used to further explore the effects of the indicators on the modeled land-use decisions. Looking at the performances of this multi-functional farm reveals, which indicator equals $\beta$ and therefore defines the result (Equation 1 in Husmann et al. (n.d.)).
 <!-- *(VVG: vielleicht: ... which indicators perform poorly and therefore restrict the solution. - das ist der Satz aus unserem TeX-Dokument)* (*CP: Wirklich restrict the result oder drive the largest distance (beta...) under specific uncertainty scenarios. Es stimmt natürlich, aber hier vielleicht noch technischer und mit mehr Bezug zur Formel arbeiten, das macht es denke ich leichter für den Leser*) -->
-Here, the worst performing scenarios of indicators 1 (financial stability), 3 (investment costs) and 8 (meeting household needs) show simultaneously the largest distances. It can be concluded that the portfolio is apparently driven by these 3 indicators. In the worst-performing uncertainty scenarios, these 3 indicators show the maximum distances across all indicators. In other words, the guaranteed performance $1-\beta$ (lowestPerformance) is defined by one the these indicators.
+Here, the worst performing scenarios of indicators 1 (financial stability), 3 (investment costs) and 8 (meeting household needs) have equally the largest distances. It can be seen that the portfolio is apparently driven by these 3 indicators. In the worst-performing uncertainty scenarios, these 3 indicators show the maximum distances across all indicators. In other words, the guaranteed performance $1-\beta$ (lowestPerformance) is defined by these indicators.
 <!-- (*CP: Die Sätze hier sind ein bisschen wiederholend, vielleicht nochmal straffen, aber im Zweifel lieber doppelt drin lassen, ist ja ein readme und hat keine Beschränkung*) (*VVG: Wenn wir im ersten Satz nicht direkt auf die Distanz eingehen, finde ich kann man es einfach so lassen, dann eist es nicht wiederholend sondern man steigert das Detail*); KH Ich finde, das ist keine Nachteil im Readme  -->
-A precise overview of the performance of the individual scenarios is provided by the output *scenarioTable* after using the *calcPerformance()* function (Table 2). These 3 indicators should therefore be carefully considered when discussing future land-cover alternatives and concepts. According to Gosling et al. (2020), this result is in line with current observed behavior, since the need for short-term liquidity mainly drives decisions of smallholder farmers in the study region. Intermediate-term economic success is not relevant until consumption of the household is secured. While the performances of indicator 1 differ relatively strong among the scenarios, the performances of indicators 3 and 8 are similar in the scenarios. This might be be attributed to the larger standard errors of this indicator. In contrast, Indicators 3 and 8 still show a low guaranteed performance level. It thus may be worth investigating the particular reasons for this high uncertainty of indicator 1.
+A full list with performance of all individual scenarios is provided by the output *scenarioTable* after using the *calcPerformance()* function (Table 2).
+
+It can be followed that these 3 indicators are crucial when discussing future land-cover alternatives and concepts. According to Gosling et al. (2020), this result is in line with current observed behavior, since the need for short-term liquidity mainly drives decisions of smallholder farmers in the study region. Intermediate-term economic success is not relevant until consumption of the household is secured. While the performances of indicator 1 differ relatively strong among the scenarios, the performances of indicators 3 and 8 are similar in the scenarios. This is attributed to the larger standard errors of this indicator. In contrast, Indicators 3 and 8 still show a low guaranteed performance level. It thus may be worth investigating the particular reasons for this high uncertainty of indicator 1.
 
 <!-- *(VVG: Wie Carola direkt hier drunter beschreibt, drüfte es ja vor allem an den verschiedenen Unsicherheiten liegen oder? Wenn man u = 0 setzt gibt es ja gar keine Unterschiede zwischen den einzelnen Szenarien, dann liegt jeder dieser kreise übereinander, daher finde ich den ersten Satz von Carola ganz gut... Auch wenn ich darüber nachdenken muss, warum es nur "in parts" sein soll - wenn ich mich nicht täusche, dürfte es fast ausschließlich durch die verschiedenen standardfehler/unsicherheiten getrieben werden - und dann könnte es beispielweise interessant sein, dass zu untersuchen, also warum diese standardfehler zwischen den Indikatoren so unterschiedlich sind)* -->
 <!-- *CP: Hab nicht ganz verstanden was Euch hier wichtig ist, vielleicht eine alternative Formulierung: Fig. 3 can be used to further explore the effects of uncertainty on the modeled land-use decisions. Indicator 1 shows a larger deviation in indicator performance pij (oder wie ihr es nennt; VVG: dürfte 1-diu sein oder? 1-beta ist guaranteed performance, 1-diu dürfte einfach die performance jedes szenarios sein) between uncertainty scenarios. This might be in parts be attributed to the larger standard errors of this indicator. In contrast, Indicators 3 and 8 still show a low guaranteed performance level (VVG: " a low guaranteed performance finde ich irreführend, da es ja die exakt gleiche guaranteed performance ist im worst-case szenario mit geringen differenzen zwischen den einzelnen szenarien), while differences between uncertainty scenarios are less prominent. ... oder so irgendwie: Such in-depth analyses help to identify trade-offs among different indicators and their likely effects on land-use decisions.....Soll hier nochmal gesagt werden wann die Grafik gemacht werden sollte und wann nicht? Vielleicht auch nicht unbedingt notwendig? VVG: Glaube wann die Grafik gemacht werden sollte, finde ich nicht so relevant hier im Text* -->
@@ -283,11 +285,9 @@ ggplot(performance_current$scenarioTable,
 
 *Fig. 4: The performance of each of the 10 indicators for the result of the currently observed land-cover composition. The colored points are the achieved levels of the indicators of all scenarios s. The dotted, horizontal red line illustrates the guaranteed performance* $(1-\beta)$*, thus the robust feasible solution of the program (Equation 1 in (Husmann et al, n.d.)).*
 
-<!-- KH: Hier fehlt noch ein Satz warum wir das machen. -->
-Restricting the parameter space only to the currently observed land-cover composition (Fig. 4) allows comparing the optimized results with the current situation. The guaranteed performance $1-\beta$ achieved under the scenarios quantifies the 
+The lower and upper bound arguments allow to model the current land-cover composition (Fig. 4). It allows to compare the difference of the optimized land-cover composition to the currently observed composition. Comparing e.g. the guaranteed performances $1-\beta$ of the scenarios provides objective measure how an optimization enhances the achievements of all indicator. A deeper look at the performance of the scenarios shows which indicators particularly benefit from optimization. The guaranteed performance is way higher when optimized. It increases by 0.3 ...
 
-
-The performances of the current land-cover composition is calculated by passing the land-cover shares in the *lowerBound* and *upperBound* arguments. By this restriction, results like the $\beta$ value or the performances of the different indicators for the currently observed composition are calculated. The comparison of the performances of the currently observed land-cover composition (Fig. 4) with the performances of the multi-functional portfolio (Fig. 3) shows that the worst-case scenario of, e.g., liquidity and meeting household needs in the multi-functional portfolio is way beyond the the worst-case scenario of the same indicators in the currently observed land-cover composition. 
+The comparison of the performances of the currently observed land-cover composition (Fig. 4) with the performances of the multi-functional portfolio (Fig. 3) shows that the worst-case scenario of, e.g., liquidity and meeting household needs in the multi-functional portfolio is way beyond the the worst-case scenario of the same indicators in the currently observed land-cover composition. 
 <!-- Ich sehe da keinen Kontrast. Das müssen wir morgen noch Mal besprechen -->
 In contrast, the performance of, e.g.,  the worst-case scenarios of financial stability, protecting soil resources, and protecting water supply shows a significant increase. Overall, the maximum distance of the worst performing scenario of the currently observed land-cover composition ($\beta$) is reduced by about 30 percentage points, from $\beta$ = 0.9114 to $\beta$ = 0.6132 (comparing the horizontal red line of Fig. 3 and Fig. 4). This interaction shows that the optimization process can help to reduce trade-offs between the different indicators. 
 
@@ -330,23 +330,18 @@ applyDf %>% gather(key = "land-cover option", value = "land-cover share", -u, -b
 
 *Fig. 5: Theoretically ideal farm compositions under increasing levels of uncertainty.*
 
-Solving the portfolio (Fig. 5) under increasing assumptions for the uncertainty levels (uValue, respectively $f_u$ in equation 4 (Husmann et al, n.d.)) gives the sensitivity of the land-cover compositions towards increasing aversion of risk of the farmer. The higher the uncertainty level, the higher the uncertainty spaces of the indicators. Here, the composition of land-cover alternatives is quite stable across different uncertainty levels (Fig. 5). Comparing portfolios of u-value 0 with u-value 3, the share of forest decreases slightly from 41.2% to 34.3%, silvopasture from 45.9% to 44.9%. The share of crops decreases from 12.9% to 1%. At the same time, the shares of pasture increased from 0% to 9.6% and of plantation from 0% to 10.2%.
+Solving the portfolio (Fig. 5) under increasing assumptions for the uncertainty levels (uValue, respectively $f_u$ in equation 4 (Husmann et al, n.d.)) gives the sensitivity of the land-cover compositions towards increasing risk aversion of the farmer. Fig. 5 corresponds to Fig. 3 in Gosling et al. (2020). The higher the uncertainty level, the higher the uncertainty spaces of the indicators. Here, the composition of land-cover alternatives is quite stable across different uncertainty levels (Fig. 5). Comparing portfolios of u-value 0 with u-value 3, the share of forest decreases slightly from 41.2% to 34.3% and silvopasture from 45.9% to 44.9%. The share of crops decreases from 12.9% to 1%. At the same time, the shares of pasture increased from 0% to 9.6% and of plantation from 0% to 10.2%.
 
-Alley cropping does not appear in any portfolio at any uncertainty level. This is due to the fact that it is not defined as the best land-cover type in any indicator. Each indicator is better provided by at least one another land-cover one then alley cropping. Also it is the worst (highest) contribution to management complexity. It therefore would provide negatively to one indicator, while not providing any best contribution. This overall negative contribution appears for all uncertainty levels. Similar appears for plantation. It is not part of the portfolio till an uncertainty level of 1.5. It only provides best to the long-term income, while providing by far worst to the general preferences and also providing generally only minor contributions to the indicators.
+Alley cropping does not appear in any portfolio at any uncertainty level. Alley cropping does in average not contribute best to any indicator. Each indicator is better provided by at least one another land-cover type. Also contributes worst (highest) to management complexity. This overall negative contribution does not change with increasing uncertainty levels. By trend, higher uncertainty levels lead to more diverse portfolios. The uncertainty spaces of all indicators increase with increasing uncertainty levels. These broadened individual uncertainty spaces then lead to a broader state space with a higher number of possible candidates for lowest-performing scenarios (i.e. scenarios that can under lower uncertainty not become part of the solution, as their distances could not be the maximum distance of any land-cover composition). Plantation, for example, is not part of the portfolio till an uncertainty level of 1.5. It only provides best to the long-term income, while providing by far worst to the general preferences and also providing generally only minor contributions to the indicators. Under an uncertainty level of 1, for example, plantation provides worst to the general preferences even if all other indicators are considered as worst-possible contributions. This ranking, however, changes after uncertainty levels above 1.5. The worst-possible contribution of forests then contributes worst among all land-cover types.
 
-By trend, higher uncertainty levels lead to more diverse portfolios. The uncertainty spaces of all indicators increase with increasing uncertainty levels. These broadened individual uncertainty spaces then lead to a broader state space with a higher number of possible candidates for lowest-performing scenarios (i.e. scenarios that can under lower uncertainty not become part of the solution, as their distances could not be the maximum distance of any land-cover composition).
 
 <!-- *VVG: Habe hier im Absatz drüber mal genau die prozente angegeben, da Carola im vorherigen Absatz (direkt hier drunter) "Genau angeben" angemrkt hatte um von dem circa wegzukommen. Es viel mir jedoch schwer das ganze genau anzugeben ohne mehrere Landnutzungsformen aufzuzählen. Vielleicht aber zu genau.* -->
 <!-- *Only the small proportion of crops (circa 10 %* ***CP:Genau angeben****) is interchanged with small proportions of pasture and plantation under uncertainty levels larger than 2. The share of forest and silvopasture is hardly affected by the uncertainty level.*  -->
 
+### Selecting Specific Indicator Bundles - Investigate the Indicators' Sensitivity
+<!-- *Soll es bei "leave-indicators-out-analysis" bleiben oder ginge auch etwas wie .. selection of specific indicator (bundles) oder "in and exclusion of indicators"* -->
 
-
-Fig. 5 corresponds to Fig. 3 in Gosling et al. (2020).
-
-### Leave-Indicators-Out-Analysis to Investigate the Indicators' Sensitivity
-*Soll es bei "leave-indicators-out-analysis" bleiben oder ginge auch etwas wie .. selection of specific indicator (bundles) oder "in and exclusion of indicators"*
-
-The sensitivity of the portfolio towards indicators or groups of indicators can be analysed by either excluding indicators of interest and interpreting the response of the resulting land-cover composition or, alternatively, by adding indicators of interest. To do so individual and independent optimization runs are carried out in and excluding different (sets of) indicators. The following code exemplifies such optimization runs for 3 relevant subsets of indicators presented in Gosling et al. (2020). The shiny app of *optimLanduse* (<http://134.76.17.50/optimlanduse_shiny/>) also provides functionality to straightforwardly leave-indicators-out by a single click. The here presented example can also be loaded into the app. Further explanation and instructions are given in the app.
+The sensitivity of the land-cover compositions towards indicators or groups of indicators can be analysed by either excluding od adding indicators of interest and interpreting the differences in the results of the distinct optimization. To do so individual and independent optimization runs are carried out in and excluding different (sets of) indicators. The set of indicators considered is representative for the stakeholders' preferences and perceptions. Comparison of optimal land-cover compositions under differing indicator combinations may help to understand how preferences of stakeholders design the land-cover compositions. The following code exemplifies such optimizations for 3 subsets of indicators presented in Gosling et al. (2020). The shiny app of *optimLanduse* (<http://134.76.17.50/optimlanduse_shiny/>) provides functionality to straightforwardly define sets of indicators by a single click. Further explanation and instructions are given in the app.
 
 
 ```{r, fig.height = 3, fig.width = 4, warning=FALSE}
@@ -377,7 +372,7 @@ result_socioeconomic$landUse %>% gather(key = landCoverOption, value = landCover
 
 *Fig. 6: Composition of the optimized farm (based on data of Gosling et al. (2020)), including only socio-economic indicators. Each land-cover option is shown in an allocated share (%).*
 
-The first leave-indicator-out example considers socio-economic indicators only (Fig. 6; see also Fig. 5 of Gosling et al. (2020)). This corresponds to the above shown multi-functional portfolio, as all indicators relevant for the solution of the multi-functional portfolio are captured also in the socio-economic group.
+The first example considers socio-economic indicators only (Fig. 6; see also Fig. 5 of Gosling et al. (2020)). The result corresponds to the above shown multi-functional portfolio (Fig. 2). This is expected, as all indicators relevant for the solution of the multi-functional portfolio (financial stability, investment costs and meeting households needs) are captured also in the socio-economic bundle.
 
 ```{r}
 performance_socioeconomic <- calcPerformance(result_socioeconomic)
@@ -416,7 +411,8 @@ ggplot(performance_socioeconomic$scenarioTable,
 
 *Fig. 7: The performance of each of the socio-economic indicators. The colored points are the achieved levels of the indicators of all scenarios s. The dotted, horizontal red line illustrates the guaranteed performance* $(1-\beta)$*, thus the robust feasible solution of the program (Equation 1 in (Husmann et al, n.d.)).*
 
-An analysis of the performance of the socio-economic indicators shows that the $\beta$ value remains the same and therefore the guaranteed performance $(1-\beta)$ also remains the same. Visualizing these performances (Fig. 7) reveals that the result is still limited by financial stability, investment costs and meeting household needs.  Accordingly, also this socio-economic portfolio still does not perfectly reflect the currently observed land-cover composition. This means that further indicators appear to be relevant for the farmers (*CP: Or altnertave weighings are likely...*).
+An analysis of the performance of the socio-economic indicators shows that the performances of the 3 relevant indicators equal the multi-functional portfolio (Fig. 7). The result is still defined by financial stability, investment costs and meeting household needs. Consequently, the guaranteed performance $(1-\beta)$ also equals the multi-functional portfolio. Therefore, also this socio-economic portfolio still does not perfectly reflect the currently observed land-cover composition. This means that further indicators appear to be relevant for the actual farmers' decisions.
+<!-- (*CP: Or altnertave weighings are likely...*). KH: Weighting Fass würde ich ungern öffnen, da diese Funktion nicht nicht implementiert ist.-->
 
 ```{r, fig.height = 3, fig.width = 4, warning=FALSE}
 dat_ecologic <- dat[dat$indicator %in% c("Protecting soil resources",
@@ -447,7 +443,7 @@ result_ecologic$landUse %>% gather(key = landCoverOption, value = landCoverShare
 
 *Fig. 8: Composition of the optimized farm (based on data of Gosling et al. (2020)), including only ecologic indicators. Each land-cover option is shown in an allocated share (%).*
 
-The ecological indicator group, as the second example for leave-indicators-out analysis, leads to a land-cover portfolio comprising forests only (Fig. 8; corresponds to Fig. 5 of Gosling et al. (2020)). It can be concluded that all contributions of all other land-cover alternatives in all scenarios (even the optimistic ones) to the ecological indicators are lower than that of forests. This portfolio differs even more from the actually observed portfolio *differs in what?* then the above shown multi-functional portfolio. Also the ecological indicators are therefore apparently not sufficient to approximate the farmers' perceptions.
+The ecological indicator group, as the second example, leads to a land-cover portfolio comprising forests only (Fig. 8; corresponds to Fig. 5 of Gosling et al. (2020)). It can be concluded that all contributions of all other land-cover alternatives in all scenarios (even the optimistic ones) to the ecological indicators are lower than these of forests. The land-cover composition of the ecologic bundle differs fundamentally from the currently observed portfolio. Also the ecological indicators are therefore apparently not sufficient to approximate the farmers' current perceptions.
 
 ### Immediate  Economic Success
 
@@ -481,7 +477,7 @@ result_short$landUse %>% gather(key = landCoverOption, value = landCoverShare, 1
 
 *Fig. 9: Composition of the optimized farm (based on data of Gosling et al. (2020)), including the prospective relevant indicators of the farmers only. Each land-cover option is shown in an allocated share (%).*
 
-The third example considers the prospective relevant indicators of the farmers only (Fig. 9). Corresponding to Fig. 5 of Gosling et al. (2020), this scenario only consists of indicators that approximate the immediate economic success. Indeed, this portfolio best reflects the portfolio observed in Eastern Panama. Hence, these indicators best reflect the farmers' goals and perceptions in Eastern Panama. The difference between this portfolio and the desired multi-functional portfolio (Fig. 2) highlights the requirements a land-cover alternative must fulfill to meet the farmers' needs and goals. The silvopasture as defined in Gosling et al. (2020) may not serve the requirements of the farmers sufficiently. Since farmers rate liquidity and meeting household needs higher than long-term profit and economic stability, pasture outperforms silvopasture in the realistic scenario. Policies or development plans may consider these indicators as key elements when promoting a landscape development towards multifunctional landscapes.
+The third example is composed of a bundle of indicators that prospectively reflect the farmers' needs and perceptions (Fig. 9). Corresponding to Fig. 5 of Gosling et al. (2020), this scenario only consists of indicators that approximate the immediate economic success. Indeed, the land-cover composition of this portfolio reflects the portfolio observed in Eastern Panama best. Hence, these indicators best reflect the farmers' goals and perceptions in Eastern Panama. The difference between this portfolio and the desired multi-functional portfolio (Fig. 2) highlights the requirements a land-cover alternative must fulfill to meet the farmers' needs and goals. The silvopasture as defined in Gosling et al. (2020) may not serve the requirements of the farmers sufficiently. Since farmers rate liquidity and meeting household needs higher than long-term profit and economic stability, pasture outperforms silvopasture in the realistic scenario. Policies or development plans may consider these indicators as key elements when promoting a landscape development towards multifunctional landscapes.
 
 ### The use of fixDistance
 
